adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,10 +9,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-        elit. Accusamus, laborum vero numquam, sequi 
-        assumenda quidem, enim sed dolor nesciunt 
-        perferendis a totam dolorum blanditiis 
-        perspiciatis. Veniam labore ea quis quasi!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem commodi nobis placeat, esse nulla repellat magnam dolor delectus sequi veniam necessitatibus saepe nihil et fugiat accusantium aspernatur. Deserunt, facere alias!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi libero fugiat quibusdam odit animi quo repellendus veritatis itaque quaerat atque corporis recusandae, at sint doloribus suscipit facere numquam perspiciatis. Maiores!</p>
 </body>
 </html>
